--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 
-@font-face {
+/* @font-face {
     font-family: DosisExtraBold;
     src: url('./assets/fonts/Dosis-ExtraBold.ttf');
 }@font-face {
@@ -9,7 +9,7 @@
 @font-face {
     font-family: BikoBoldLight;
     src: url('./assets/fonts/TerminalDosis-Light.ttf');
-}
+} */
 
 .banner_img{
 animation: movimiento 2.5s linear infinite;
