--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,4 @@
     
-    /* @tailwind base;
-    @tailwind components;
-    @tailwind utilities; */
-    
 .banner_img{
     animation: movimiento 2.5s linear infinite;
     
@@ -219,3 +215,43 @@
         top: 0;
         cursor: zoom-in;
     }
+
+    .swiper {
+        width: 100%;
+        height: 100%;
+      }
+      
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+      
+        /* Center slide text vertically */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      
+      .swiper-pagination-bullet {
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        line-height: 20px;
+        font-size: 12px;
+        color: #000;
+        opacity: 1;
+        background: rgba(0, 0, 0, 0.2);
+      }
+      
+      .swiper-pagination-bullet-active {
+        color: #fff;
+        background: #007aff;
+      }
+      
