--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,7 @@
     }
     
     .Titles{
-        background-color: #37474f;
+        background-color: #5b6063;
         border-radius: 10px;
         color: #fff;
         align-content: center;
@@ -254,4 +254,27 @@
         color: #fff;
         background: #007aff;
       }
-      
+     
+* {
+    scrollbar-width: thin;  /* Firefox: Establecer el grosor del scroll */
+    scrollbar-color: #075525 #ff7b00; 
+  }
+  
+  /* Estilos para los navegadores basados en Webkit (como Chrome y Safari) */
+  *::-webkit-scrollbar {
+    width: 8px; /* Ancho del scroll */
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #888; /* Color del "thumb" del scroll */
+    border-radius: 10px;     /* Bordes redondeados del "thumb" */
+  }
+  
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Color al pasar el mouse por el "thumb" */
+  }
+  
+  *::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Fondo del track */
+  }
+  
